@@ -99,6 +99,7 @@ struct remote_conf
 #define SHARED_TDLINE	0x0800
 #define SHARED_PDLINE	0x1000
 #define SHARED_UNDLINE	0x2000
+#define SHARED_GRANT	0x4000
 
 #define SHARED_ALL	(SHARED_TKLINE | SHARED_PKLINE | SHARED_UNKLINE |\
 			SHARED_PXLINE | SHARED_TXLINE | SHARED_UNXLINE |\
